[package]
name = "git-commit-helper-jp"
description = "Git Commit Helper JPはGitのコミットメッセージ作成を助けてくれるCLIツールです。"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
inquire = "0.6.2"
thiserror = "1.0.49"
